--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.shushme">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="com.example.android.shushme.MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup">
+        <receiver android:name=".GeofenceBroadcstReciever" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDFkHe3-FpN36Z_hEXTVto2OW0ekPFZ0oY" />
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <activity android:name=".NameAPlace" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -16,10 +29,9 @@
         </activity>
 
         <provider
-            android:name="com.example.android.shushme.provider.PlaceContentProvider"
+            android:name=".provider.PlaceContentProvider"
             android:authorities="com.example.android.shushme"
-            android:exported="false"/>
-
+            android:exported="false" />
     </application>
 
 </manifest>
